clant (1.0.2) stable;

  * Avoid running tools on sources in the build directory
  * Fix the jobs command line parameter
  * Include documentation in distribution
  * Print a warning when include-what-you-use fails
  * Print quoted includes first
  * Print the context of clang-tidy errors
  * Use include mapping files when checking extra headers

 -- David Robillard <d@drobilla.net>  Wed, 06 Jan 2021 22:39:49 +0000

clant (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Sun, 13 Dec 2020 19:00:30 +0000