@@ -1,3 +1,9 @@
+clant (1.0.3) unstable;
+
+  * Exit with non-zero status when errors are found
+
+ -- David Robillard <d@drobilla.net>  Wed, 13 Jan 2021 14:06:17 +0000
+
 clant (1.0.2) stable;
 
   * Avoid running tools on sources in the build directory
